@@ -919,84 +919,3 @@ function Test-IisWebsite
     }
     return $false
 }
-
-function Unlock-IisBasicAuthentication
-{
-    <#
-    .SYNOPSIS
-    Unlocks basic authentication IIS configuration so that sites can enable/disable basic authentication.
-
-    .DESCRIPTION
-    By default, IIS locks the basic authentication configuration, so that no sites can enable it.  This function unlocks it so Windows authentication can be enabled.  Specifically, it unlocks the `system.webServer/security/authentication/basicAuthentication` IIS configuration section.
-
-    .EXAMPLE
-    Unlock-IisBasicAuthentication
-
-    Unlocks basic authentication configuration so that websites can enable, configure and use basic authentication.
-    #>
-    [CmdletBinding(SupportsShouldProcess=$true)]
-    param(
-    )
-    
-    $commonParams = @{}
-    if( $pscmdlet.MyInvocation.BoundParameters.ContainsKey('WhatIf') )
-    {
-        $commonParams.WhatIf = $true
-    }
-    
-    Unlock-IisConfigSection -Name basicAuthentication @commonParams
-}
-
-function Unlock-IisCgi
-{
-    <#
-    .SYNOPSIS
-    Unlocks CGI IIS configuration so that websites can configure their own CGI settings.
-
-    .DESCRIPTION
-    By default, IIS locks the CGI section so that no websites can enable or configure it.  This function unlocks CGI configuration so that websites can configure their own CGI settings.  Specifically, it unlocks the `system.webServer/cgi` IIS configuration section.
-
-    .EXAMPLE
-    Unlock-IisCgi
-
-    Unlocks the CGI IIS configuration section so that websites can configure their own CGI settings.
-    #>
-    [CmdletBinding(SupportsShouldProcess=$true)]
-    param(
-    )
-    
-    $commonParams = @{}
-    if( $pscmdlet.MyInvocation.BoundParameters.ContainsKey('WhatIf') )
-    {
-        $commonParams.WhatIf = $true
-    }
-    
-    Unlock-IisConfigSection -Name cgi @commonParams
-}
-
-function Unlock-IisWindowsAuthentication
-{
-    <#
-    .SYNOPSIS
-    Unlocks Windows authentication IIS configuration so that sites can enable/disable Windows authentication.
-
-    .DESCRIPTION
-    By default, IIS locks the Windows authentication configuration, so that no sites can enable it.  This function unlocks it so Windows authentication can be enabled.  Specifically, it unlocks the `system.webServer/security/authentication/windowsAuthentication` IIS configuration section.
-
-    .EXAMPLE
-    Unlock-IisWindowsAuthentication
-
-    Unlocks Windows authentication configuration so that websites can enable, configure and use Windows authentication.
-    #>
-    [CmdletBinding(SupportsShouldProcess=$true)]
-    param(
-    )
-    
-    $commonParams = @{}
-    if( $pscmdlet.MyInvocation.BoundParameters.ContainsKey('WhatIf') )
-    {
-        $commonParams.WhatIf = $true
-    }
-    
-    Unlock-IisConfigSection -Name windowsAuthentication @commonParams
-}
